--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
 <h1>This is the first file in git</h1>
 enhancing the code
 Added downloaded functionality
+Added downloaded functionality
+Added downloaded functionality
+Added downloaded functionality
+Added downloaded functionality
+Added downloaded functionality
+Added downloaded functionality
+Added downloaded functionality
